--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "WaterFront",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -21,6 +21,8 @@
     "gulp-sourcemaps": "^1.5.2",
     "gulp-uglify": "^1.2.0",
     "gulp-useref": "^3.0.4",
+    "gulp-war": "^0.1.4",
+    "gulp-zip": "^4.0.0",
     "run-sequence": "^1.1.2"
   }
 }
